--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Personalize seu tema aqui -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <!-- Fundo cinza escuro -->
+        <item name="colorBackground">@color/gray_dark</item>
+        <!-- Cor do texto principal -->
+        <item name="android:textColor">@color/white</item>
+        <!-- Cores do botão -->
+        <item name="colorPrimary">@color/white</item> <!-- cor normal do botão -->
+        <item name="colorPrimaryVariant">@color/red</item> <!-- cor do botão ativado -->
+        <item name="colorOnPrimary">@color/red</item> <!-- cor do texto no botão -->
+        <!-- Outras cores -->
+        <item name="colorSecondary">@color/red</item>
+        <item name="colorOnSecondary">@color/white</item>
     </style>
 </resources>
