--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <!-- Estado pressionado (ativo) -->
-    <item android:state_pressed="true" >
+    <item android:state_pressed="true">
         <shape>
             <solid android:color="@color/red" />
             <corners android:radius="8dp" />
         </shape>
     </item>
 
-    <!-- Estado normal -->
+    <!-- Estado padrão -->
     <item>
         <shape>
             <solid android:color="@color/white" />
             <corners android:radius="8dp" />
         </shape>
     </item>
-
 </selector>
