--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/gray_dark</item>
+        <item name="colorPrimary">@color/red</item>
+        <item name="colorPrimaryVariant">@color/red</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/red</item>
+        <item name="colorSecondary">@color/gray_dark</item>
+        <item name="colorSecondaryVariant">@color/gray_dark</item>
         <item name="colorOnSecondary">@color/white</item>
     </style>
 </resources>
