--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Status: ..."
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:layout_marginBottom="20dp" />
 
     <RadioButton
         android:id="@+id/radioYes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="YES"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:layout_marginBottom="10dp" />
 
     <RadioButton
         android:id="@+id/radioNo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="NO"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:layout_marginBottom="20dp" />
 
     <Button
         android:id="@+id/btnInject"
@@ -33,7 +37,6 @@
         android:layout_height="wrap_content"
         android:text="Executar"
         android:background="@drawable/button_background"
-        android:textColor="@color/white"
-        android:layout_marginTop="16dp"/>
+        android:textColor="@color/gray_dark" />
 
 </LinearLayout>
